# Backend-template

./: Makefile  init_factory.py  pyproject.toml
app/: main.py
app/adapters/: ai_provider.py
app/api/v1/endpoints/: ai.py  factory.py
app/core/: config.py  container.py  database.py  exceptions.py  interfaces.py  logger.py  middleware.py  utils.py
app/models/: device.py
app/templates/: index.html
tests/: .env.test  conftest.py  mock_data.py  test_api.py  test_complex_logic.py
