[tool.poetry]
name = "factory-backend-standard"
version = "0.1.0"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
fastapi = "^0.100.0"
uvicorn = {extras = ["standard"], version = "^0.23.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.0"}
structlog = "^23.1.0"
pydantic-settings = "^2.0.0"
aiosqlite = "^0.19.0"
httpx = "^0.24.0"
jinja2 = "^3.1.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-asyncio = "^0.21.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"